@@ -1,3 +1,8 @@
+2007-10-01  Jeremy Katz  <katzj@redhat.com>
+
+	* src/password-dialog.c, src/applet.glade:
+	        - (showpasscb_toggled_cb): Hide password by default, cb to show
+
 2007-09-30  Dan Williams  <dcbw@redhat.com>
 
 	* src/password-dialog.c
